edit commit again

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,5 @@ MINIO_ENDPOINT=https://s3.us-west-004.backblazeb2.com
 MINIO_BUCKET=yourbucketname
 
 # APP CONFIG
-APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
