--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
   "require": {
     "aws/aws-sdk-php": "^3.366",
+    "php": "^8.2",
+    "ext-pdo": "*",
+    "ext-pdo_mysql": "*",
     "vlucas/phpdotenv": "^5.6"
   },
   "autoload": {
